<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Asif Imtiaz Shaafi
  ~     Email: a15shaafi.209@gmail.com
  ~     Date: 2, 2018
  ~
  ~ Copyright (c) 2018, AppHouseBD. All rights reserved.
  ~
  ~ Last Modified on 2/27/18 1:43 PM
  ~ Modified By: shaafi
  -->

<resources>
    <string name="app_name">AustHub</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="navigation_header_img">navigation hreader img</string>
    <string name="class_routine">Class Routine</string>
    <string name="cgpa_calculator">CGPA Calculator</string>
    <string name="set_quiz_alarm">Set Quiz Reminder</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>

    <string name="full_screen_ad">ca-app-pub-5940609524922490/7586405628</string>

    <!--main activity titles array-->
    <string-array name="title_array">
        <item>Home</item>
        <item>Routine</item>
        <item>CGPA Calculator</item>
        <item>Set Reminder</item>
        <item>Results</item>

    </string-array>

    <!--home titles-->
    <string-array name="home_title_array">
        <item>Class Routine</item>
        <item>CGPA Calculator</item>
        <item>Reminder</item>
        <item>Results</item>
        <item>Settings</item>
        <item>About Us</item>

    </string-array>

    <!--preference setting names-->
    <string name="std_year">std_year</string>
    <string name="std_sem">std_sem</string>
    <string name="std_sec">std_sec</string>
    <string name="std_dept">std_dept</string>
    <string name="check_time">time</string>
    <string name="std_name">std_name</string>
    <string name="file_save_mode">save_mode</string>
    <string name="app_version">Version</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">feedback key</string>
    <string name="summary_support">Please give us a feedback of your experience of using the app. It will help us to improve the app.</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="default_notification_channel_id">AustHubNotification</string>

    <!--navigation menu items-->

    <!--std dept title-->
    <string-array name="std_dept_title">

        <item>Architecture</item>
        <item>BBA</item>
        <item>CE</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>IPE</item>
        <item>ME</item>
        <item>TE</item>

    </string-array>

    <!--std dept data-->
    <string-array name="std_dept_value">

        <item>arch</item>
        <item>bba</item>
        <item>ce</item>
        <item>cse</item>
        <item>eee</item>
        <item>ipe</item>
        <item>me</item>
        <item>te</item>

    </string-array>

    <!--std year title-->
    <string-array name="std_year_title">

        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>

    </string-array>

    <!--std year value-->
    <string-array name="std_year_value">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <!--std semester title-->
    <string-array name="std_sem_title">

        <item>1st Semester</item>
        <item>2nd Semester</item>

    </string-array>

    <!--std semester value-->
    <string-array name="std_sem_value">

        <item>1</item>
        <item>2</item>

    </string-array>

    <!--std section title-->
    <string-array name="std_section_title">
        <item>Section A</item>
        <item>Section B</item>
        <item>Section C</item>
        <item>Section D</item>
    </string-array>

    <!--std section values-->
    <string-array name="std_section_value">

        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>

    </string-array>

    <!--file save mode-->
    <string-array name="save_modes">
        <item>TXT file</item>
        <item>PDF file</item>
    </string-array>

    <!--save values-->
    <string-array name="save_mode_values">
        <item>.txt</item>
        <item>.pdf</item>
    </string-array>

    <!--about us-->
    <string name="about_us_string">
        Department Of CSE\n\n

        ---Authors---\n
        Asif Imtiaz Shaafi\n
        Sayef Reyadh Khan\n\n
        ---Icon Credits---\n
        Abdullah Kabir\n
        Icon made by Freepik, Popcorns Arts from www.flaticon.com\n
    
    </string>
    <string name="title_activity_user_sign_in">AustHub-Sign In</string>
    <string name="splash_internet_error_msg">Please connect to internet to download the routine from server.\nThis download is required only once!</string>
    <string name="splah_data_fetch_error_msg">Sorry, Something went wrong!\nPlease try again later!</string>
    <string name="sign_up_user_img">Sign_up_user_img</string>
    <string name="pref_user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_result_display">CGPA Result</string>
    <string name="no_files_found">No Results Found</string>

    <!--file name getting string-->
    <string name="__">__</string>
    <string name="_00">00</string>
    <string name="_000">000</string>
    <string name="calculate">Calculate</string>
    <string name="home_image">home_image</string>
    <string name="reminder_iem_logo">reminder_iem_logo</string>
    <string name="download_msg">Downloading Routine. Please wait for a while.\nThe time may vary according to your network speed. You may leave the app as it will keep downloading in the background. Sorry for the inconvenience.</string>
    <string name="last_checked_on">Last Checked On:</string>
    <string name="current_data_version">Current Routine Version:</string>

    <string name="copy_right">&#169;AppHouseBD</string>
    <string name="pref_user_email">User Email</string>
    <string name="pref_user_uid">User UID</string>
    <string name="pref_user_img">User Img</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="unknown_error">Something went wrong! Try again after some time!</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="user_signup_provider">Provider</string>
    <string name="user">App User</string>
    <string name="logout">Logout</string>
    <string name="results">Results</string>
    <string name="home">Home</string>
    <string name="pref_user_phone">User Phone</string>
    <string name="pref_data_version">Pref Data Version</string>
    <string name="check_for_update">Check For Update</string>
    <string name="pref_show_download_alert">Show Download Alert</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="download_complete">Download Completed!</string>
    <string name="download_failed">Download Failed, Try Later!</string>
    <string name="nvr_checked">Never Checked</string>
    <string name="downloading">Downloading…</string>
    <string name="enter_marks">Enter Marks:</string>
    <string name="no_data_found">Sorry No Course Data Found!</string>
    <string name="download_error">Download form server error</string>
    <string name="austhub_logo">AustHub logo</string>

    <string name="aust_hub_notification_title_template">AustHub: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="aust_hub_notification_placeholder_text_template">%1$s</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_activity_show_notification_details">Notification Details</string>

</resources>
