<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Asif Imtiaz Shaafi
  ~     Email: a15shaafi.209@gmail.com
  ~     Date: 2, 2018
  ~
  ~ Copyright (c) 2018, AppHouseBD. All rights reserved.
  ~
  ~ Last Modified on 2/27/18 1:43 PM
  ~ Modified By: shaafi
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mainUi.activities.SettingsActivity">

    <PreferenceCategory android:title="Academic Details">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select Your Department"
            android:entries="@array/std_dept_title"
            android:entryValues="@array/std_dept_value"
            android:icon="@drawable/ic_routine"
            android:key="@string/std_dept"
            android:title="Change Department"/>


        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select Your Academic Year"
            android:entries="@array/std_year_title"
            android:entryValues="@array/std_year_value"
            android:icon="@drawable/ic_routine"
            android:key="@string/std_year"
            android:title="Change Academic Year"/>


        <ListPreference
            android:dialogTitle="Select Your Semester"
            android:entries="@array/std_sem_title"
            android:entryValues="@array/std_sem_value"
            android:icon="@drawable/ic_routine"
            android:key="@string/std_sem"
            android:title="Change Semester"/>

        <ListPreference
            android:dialogTitle="Select Section:"
            android:entries="@array/std_section_title"
            android:entryValues="@array/std_section_value"
            android:icon="@drawable/ic_routine"
            android:key="@string/std_sec"
            android:title="Change Section"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="About App">

        <Preference
            android:enabled="true"
            android:key="@string/title_version"
            android:shouldDisableView="true"
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference android:summary="About AppHouseBD">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.facebook.com/apphousebd" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>