<!--
  ~ Created by Asif Imtiaz Shaafi
  ~     Email: a15shaafi.209@gmail.com
  ~     Date: 2, 2018
  ~
  ~ Copyright (c) 2018, AppHouseBD. All rights reserved.
  ~
  ~ Last Modified on 2/27/18 1:33 PM
  ~ Modified By: shaafi
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/splash_container"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:background="#262626"
                                                 tools:context="com.apphousebd.austhub.mainUi.activities.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:contentDescription="@string/austhub_logo"
            android:id="@+id/aust_logo_title_2"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"/>


        <!--<TextView-->
        <!--android:text="A    U    S    T"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:textSize="30sp"-->
        <!--android:id="@+id/aust_logo_title"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_above="@+id/aust_logo_title_2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->

        <!--<TextView-->
        <!--android:text="H    U    B"-->
        <!--android:layout_margin="24dp"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:textSize="28sp"-->
        <!--android:id="@+id/aust_logo_title_2"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/aust_logo_title_2"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:id="@+id/splash_download_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aust_logo_title_2"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/download_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#fff"/>

            <ProgressBar
                android:id="@+id/splash_progress"
                style="@style/CustomProgressBar"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="16dp"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="8dp"
        android:text="@string/copy_right"
        android:textColor="#fff"
        android:textStyle="bold"/>

</android.support.design.widget.CoordinatorLayout>
