<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="6dp"
    android:background="@color/black_overlay"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/Theme.AppCompat.Dialog"
    tools:context="com.apphousebd.austhub.userAuth.SignUp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:text="Add an Image:"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/sign_up_user_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:contentDescription="@string/sign_up_user_img"
                    android:onClick="getImage"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_add_a_photo"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColorHint="#00d18b"
                app:hintTextAppearance="?android:attr/textAppearanceMedium">

                <EditText
                    android:id="@+id/sign_up_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_name"
                    android:inputType="textCapWords|textPersonName"
                    android:maxEms="30"
                    android:textColorHighlight="@color/colorAccent"/>

            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/sign_up_user_email_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:textColorHint="#00d18b"-->
            <!--app:hintTextAppearance="?android:attr/textAppearanceMedium">-->

            <!--<EditText-->
            <!--android:id="@+id/sign_up_user_email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:cursorVisible="true"-->
            <!--android:hint="@string/user_email"-->
            <!--android:inputType="textEmailAddress|textWebEmailAddress"-->
            <!--android:maxEms="30"-->
            <!--android:textColorHighlight="@color/colorAccent"-->
            <!--android:textEditSuggestionItemLayout="@android:layout/test_list_item"/>-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="#0073ac"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sign_up_user_dept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="false"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin"
                android:spinnerMode="dropdown"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0073ac"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sign_up_user_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="false"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0073ac"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sign_up_user_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="false"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#0073ac"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sign_up_user_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="false"
                android:gravity="center"
                android:padding="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="#0073ac"/>

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:onClick="finishActivity"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/cancel"
                    android:textAllCaps="false"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:onClick="performSignUp"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"/>

            </android.support.v7.widget.ButtonBarLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
